--- a/index.html
+++ b/index.html
@@ -1,43 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>mruby-spdy by matsumoto-r</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="mruby-spdy : SPDY Module for mruby" />
 
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>mruby-spdy</title>
   </head>
+
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/matsumoto-r/mruby-spdy">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/matsumoto-r/mruby-spdy/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/matsumoto-r/mruby-spdy/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
 
-    <div class="wrapper">
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/matsumoto-r/mruby-spdy">View on GitHub</a>
 
-      <section>
-        <div id="title">
-          <h1>mruby-spdy</h1>
-          <p>SPDY Module for mruby</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/matsumoto-r">matsumoto-r</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+          <h1 id="project_title">mruby-spdy</h1>
+          <h2 id="project_tagline">SPDY Module for mruby</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/matsumoto-r/mruby-spdy/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/matsumoto-r/mruby-spdy/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="spdy-module-for-mruby--" class="anchor" href="#spdy-module-for-mruby--"><span class="octicon octicon-link"></span></a>SPDY Module for mruby  <a href="https://travis-ci.org/matsumoto-r/mruby-spdy"><img src="https://travis-ci.org/matsumoto-r/mruby-spdy.png?branch=master" alt="Build Status"></a>
 </h1>
@@ -152,36 +145,13 @@
 <a name="install-by-mrbgems" class="anchor" href="#install-by-mrbgems"><span class="octicon octicon-link"></span></a>install by mrbgems</h2>
 
 <ul>
-<li>Download</li>
-</ul><pre><code>git clone https://github.com/mruby/mruby.git
-git clone https://github.com/matsumoto-r/mruby-spdy.git
-</code></pre>
-
-<ul>
-<li>spdylay build</li>
-</ul><pre><code>cd mruby-spdy
-git submodule init
-git submodule update
-cd src/spdylay
-autoreconf -i
-automake
-autoconf
-./configure
-make
-cd ../../../
-</code></pre>
-
-<ul>
 <li>add conf.gem line to <code>build_config.rb</code>
 </li>
-</ul><pre><code>cd mruby
-</code></pre>
-
-<div class="highlight highlight-ruby"><pre><span class="no">MRuby</span><span class="o">::</span><span class="no">Build</span><span class="o">.</span><span class="n">new</span> <span class="k">do</span> <span class="o">|</span><span class="n">conf</span><span class="o">|</span>
+</ul><div class="highlight highlight-ruby"><pre><span class="no">MRuby</span><span class="o">::</span><span class="no">Build</span><span class="o">.</span><span class="n">new</span> <span class="k">do</span> <span class="o">|</span><span class="n">conf</span><span class="o">|</span>
 
   <span class="c1"># ... (snip) ...</span>
 
-  <span class="n">conf</span><span class="o">.</span><span class="n">gem</span> <span class="s1">'../mruby-spdy'</span>
+  <span class="n">conf</span><span class="o">.</span><span class="n">gem</span> <span class="ss">:github</span> <span class="o">=&gt;</span> <span class="s1">'matsumoto-r/mruby-spdy'</span>
 <span class="k">end</span>
 </pre></div>
 
@@ -199,9 +169,17 @@ cd ../../../
 <li><a href="http://www.opensource.org/licenses/mit-license.php">http://www.opensource.org/licenses/mit-license.php</a></li>
 </ul>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">mruby-spdy maintained by <a href="https://github.com/matsumoto-r">matsumoto-r</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
